# GolaemForUSD

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
cfg/cmake/: FindFbxSdk.cmake  FindPython.cmake  FindUSD.cmake  GolaemDefinitions.cmake  GolaemMacros.cmake
src/: glmUSD.cpp  glmUSD.h  glmUSDPluginAPI.h
src/procedural/: glmUSDData.cpp  glmUSDData.h  glmUSDDataImpl.cpp  glmUSDDataImpl.h  glmUSDFileFormat.cpp  glmUSDFileFormat.h  plugInfo.json
src/utils/: glmUSDLogger.cpp  glmUSDLogger.h
src/version/: glmUSDPlugin.rc  glmUSDPluginProductInformation.cpp  glmUSDPluginProductInformation.h  glmUSDPluginVersion.h
